# gathering

./: .coveragerc  .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DEBUG_HOVER.md  HOVER_FIX_FINAL.md  HOVER_QUICK_TEST.md  LICENSE  MANIFEST.in  NEXT_SESSION.md  PHASE7_COMPLETE.md  README.md  SESSION_SUMMARY.md  TESTING_PYLSP.md  TEST_HOVER_FINAL.md  TEST_HOVER_INSTRUCTIONS.md  TEST_WEBSOCKET.md  TEST_WORKSPACE_COMPLETE.md  WORKSPACE_FIX.md  blueprint.md  demo_project_agent.py  lacaze  next_steps.md  persona-olivia.md  persona-sophie.md  picopg  pyproject.toml  pytest.ini  release_script_1.0.1.sh  requirements-dev.txt  requirements.txt  setup.cfg  sphinx_build.sh  start-workspace.sh  test_pylsp_hover.py  test_websocket_integration.py  v011-architecture-design.md  v011-bdd-scenarios.txt  (+2 more)
.github/workflows/: ci.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dashboard/: package-lock.json  package.json  vite.config.ts  websocket_test.html
dashboard/coverage/: coverage-final.json  index.html
dashboard/src/: App.tsx  i18n.ts  index.css  main.tsx
docs/: ARCHITECTURE.md  AUDIO_VIDEO_TROUBLESHOOTING.md  AUDIT_REPORT.md  CIRCLES.md  CONVERSATIONS.md  DASHBOARD_IMPROVEMENTS.md  DEMO_MARKDOWN_MAGIC.md  DOMAIN_ANALYSIS.md  EVENT_BUS.md  GIT_VIEW.md  IMAGE_VIEWER_FIX.md  LSP_ARCHITECTURE_SUMMARY.md  LSP_INTEGRATION_COMPLETE.md  LSP_PLUGIN_DEVELOPMENT.md  LSP_STATUS_AND_OPTIMIZATIONS.md  MEDIA_VIEWERS_SUMMARY.md  Makefile  PHASE1_CHANGELOG.md  PHASE2_CHANGELOG.md  PHASE3_CHANGELOG.md  PHASE4_CHANGELOG.md  PHASE5_CHANGELOG.md  PHASE6_CHANGELOG.md  PHASE6_DESIGN.md  PHASE7.1_COMPLETE.md  PHASE7.1_GIT_OPERATIONS.md  PHASE7.2_CLIENT_CACHE.md  PHASE7.2_COMPLETE.md  PHASE7.3_ENHANCEMENTS.md  PHASE7.4_RESIZABLE_FIX.md  PHASE7.6_TERMINAL_FIX.md  PHASE7.7_CHANGELOG.md  PHASE7.7_FINAL.md  PHASE7.8_MEDIA_VIEWERS.md  PHASE7_CHANGELOG.md  PHASE8_ADVANCED_IDE.md  PLUGINS.md  PRODUCTION_READINESS.md  PROJECT_INTEGRATION.md  QUICKSTART_WEBSOCKET.md  (+14 more)
docs/_static/: custom.css  lightbox.js
docs/api/: core.rst  endpoints.md  models.md  reference.md
docs/developer/: api.md  architecture.md  architecture.rst  blueprint.md  contributing.md  contributing.rst  database.md  manual.md  next_steps.md  testing.md  websocket.md  workflow.md
docs/technical/: developer.md
docs/user/: agents.md  circles.md  dashboard.md  examples.rst  faq.md  faq.rst  guide.md  guide.rst  installation.md  installation.rst  quickstart.md  quickstart.rst  workspace.md
gathering/: __init__.py  quick_start.py
gathering/agents/: __init__.py  conversation.py  goals.py  memory.py  persona.py  postgres_store.py  project_context.py  resume.py  session.py  wrapper.py
gathering/api/: __init__.py  async_db.py  auth.py  dependencies.py  main.py  middleware.py  rate_limit.py  schemas.py  websocket.py
gathering/cache/: __init__.py  redis_cache.py  redis_manager.py
gathering/core/: __init__.py  competencies.py  competency_registry.py  config.py  exceptions.py  implementations.py  interfaces.py  logging.py  schemas.py  tool_registry.py
gathering/db/: __init__.py  database.py  models.py  setup.py
gathering/events/: __init__.py  event_bus.py
gathering/llm/: __init__.py  providers.py
gathering/lsp/: __init__.py  manager.py  plugin_system.py  pylsp_client.py  pylsp_wrapper.py  python_server.py
gathering/orchestration/: __init__.py  background.py  circle.py  circle_store.py  events.py  facilitator.py  scheduler.py
gathering/plugins/: __init__.py  base.py  core.py  manager.py
gathering/rag/: __init__.py  embeddings.py  memory_manager.py  vectorstore.py
gathering/skills/: __init__.py  base.py  registry.py
gathering/telemetry/: __init__.py  config.py  decorators.py  metrics.py
gathering/utils/: bounded_lru.py  document_extractor.py  sql.py
gathering/websocket/: __init__.py  integration.py  manager.py
gathering/workspace/: __init__.py  activity_tracker.py  file_manager.py  git_manager.py  manager.py  terminal_manager.py
personas/: ahmed_hassan.md  aisha_oduya.md  akira_mori.md  alex_reyes.md  amara_okonkwo.md  anders_lindqvist.md  anna_kowalczyk.md  aya_benali.md  ben_wyatt.md  carlos_mendez.md  chen_wei.md  clara_dubois.md  david_osei.md  diana_chen.md  dmitri_volkov.md  elena_kowalski.md  elena_volkov.md  erik_nordstrom.md  freya_andersen.md  hannah_berg.md  ibrahim_hassan.md  jade_wong.md  james_okonkwo.md  james_whitfield.md  kevin_zhao.md  kofi_mensah.md  kwame_asante.md  lena_fischer.md  lisa_morgan.md  lucas_ferreira.md  luna_martinez.md  marco_deluca.md  marcus_cole.md  marcus_johnson.md  mateo_silva.md  maya_krishnan.md  mei_taniguchi.md  michael_oconnor.md  nikolai_petrov.md  nina_petrov.md  (+23 more)
scripts/: generate_personas_sql.py  import_personas.py  normalize_personas.py  start-workspace.sh
src/: quick_start.py
src/agents/: __init__.py
tests/: .coveragerc  __init__.py  conftest.py  pytest.ini  test_advisory_lock_scheduler.py  test_agent_conversation.py  test_agents_goals.py  test_agents_persistence.py  test_api.py  test_api_models.py  test_api_workspace.py  test_async_db_routes.py  test_auth.py  test_auth_persistence.py  test_cache.py  test_code_executor.py  test_competency_registry.py  test_core_competencies.py  test_core_exceptions.py  test_core_schemas.py  test_dashboard.py  test_dashboard_circles.py  test_database.py  test_design_plugin.py  test_event_bus.py  test_event_bus_concurrency.py  test_graceful_shutdown.py  test_lsp.py  test_middleware.py  test_orchestration.py  test_orchestration_background.py  test_pipeline_execution.py  test_pipeline_validation.py  test_plugins.py  test_postgres_store.py  test_project_context.py  test_project_integration.py  test_rag.py  test_rate_limit_tiers.py  test_routers_background_tasks.py  (+13 more)
(+280 files in other folders)
