[tool.poetry]
name = "gathering"
version = "0.1.0"
description = "A collaborative multi-agent AI framework"
authors = ["Loc Cosnier <loc.cosnier@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=gathering --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "0.1.0"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
