[tool.poetry]
name = "gathering"
version = "0.5.0"
description = "A collaborative multi-agent AI framework for autonomous AI agents working together"
authors = ["Loc Cosnier <loc.cosnier@pm.me>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alkimya/gathering"
documentation = "https://gathering.readthedocs.io"
homepage = "https://github.com/alkimya/gathering"
keywords = ["ai", "agents", "multi-agent", "llm", "framework", "collaboration", "autonomous", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
packages = [{include = "gathering"}]

# Include non-Python files in the package
include = [
    { path = "gathering/db/migrations/*.sql", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"
# Core
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
# API
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
websockets = "^12.0"
# Database
pycopg = "^0.1.0"
asyncpg = "^0.29"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.13"
# LLM Providers
anthropic = "^0.40"
openai = "^1.0"
httpx = "^0.26"
# Utilities
structlog = "^24.0"
tenacity = "^8.2"
aiofiles = "^23.0"
python-multipart = "^0.0.9"
croniter = "^2.0"
# Auth
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
# Monitoring
psutil = "^5.9"

[tool.poetry.extras]
# Optional dependencies for specific features
rag = ["pgvector", "sentence-transformers"]
redis = ["redis", "hiredis"]
all = ["pgvector", "sentence-transformers", "redis", "hiredis"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
pytest-mock = "^3.12"
black = "^23.0"
flake8 = "^6.1"
mypy = "^1.0"
pre-commit = "^3.5"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"
sphinx-copybutton = "^0.5"
sphinx-design = "^0.5"
myst-parser = "^2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=gathering --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "security: Security-related tests",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # assert used (ok in tests)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
